--- a/buildout.cfg
+++ b/buildout.cfg
@@ -10,23 +10,23 @@ parts =
 versions = versions
 hooks-directory = ${buildout:directory}/hooks
 [versions]
+numpy=1.0.4
 setuptools = 0.6c8
 minitage.core = 0.0.4
 minitage.recipe = 0.0.1
 [site-packages-2.4]
-name=site-packages-2.4
+eggs=numpy
 url = http://${mirrors:sourceforge}/sourceforge/numpy/numpy-1.0.4.tar.gz
-recipe = minitage.recipe:du
+recipe = minitage.recipe:egg
 freebsd-patches=
     ${buildout:directory}/patches/patch-numpy-core-include-numpy-ufuncobject.h
     ${buildout:directory}/patches/patch-numpy_f2py_setup.py
 patch-options=-p0
 
 [site-packages-2.5]
-name=site-packages-2.5
-url = http://${mirrors:sourceforge}/sourceforge/numpy/numpy-1.0.4.tar.gz
+eggs=numpy
 python = python2.5
-recipe = minitage.recipe:du
+recipe = minitage.recipe:egg
 freebsd-patches=
     ${buildout:directory}/patches/patch-numpy-core-include-numpy-ufuncobject.h
     ${buildout:directory}/patches/patch-numpy_f2py_setup.py
