--- a/buildout.cfg
+++ b/buildout.cfg
@@ -12,7 +12,7 @@ hooks-directory = ${buildout:directory}/hooks
 [versions]
 numpy=1.0.4
 setuptools = 0.6c8
-minitage.core = 0.0.4
+minitage.core>=0.0.4
 minitage.recipe = 0.0.1
 [site-packages-2.4]
 eggs=numpy
