up recipe version

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -13,7 +13,7 @@ hooks-directory = ${buildout:directory}/hooks
 numpy=1.0.4
 setuptools = 0.6c8
 minitage.core>=0.0.4
-minitage.recipe = 0.0.1
+minitage.recipe  >= 0.0.1
 [site-packages-2.4]
 eggs=numpy
 url = http://${mirrors:sourceforge}/sourceforge/numpy/numpy-1.0.4.tar.gz
